added audio is done

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,12 @@
 *.sketch
 *.exe
 *.dll
+*.mp3
+*.wav
+*.m4a
+*.ogg
+*.aac
+*.flac
 
 # Но оставляем возможность держать пустые папки (чтобы структура не ломалась)
 !**/.gitkeep
