--- a/src/Politico.API/appsettings.json
+++ b/src/Politico.API/appsettings.json
@@ -45,14 +45,17 @@
   },
   "Media": {
     "RootPath": "uploads/media",
-    "RequestPath": "/media",
+    //"RequestPath": "/media",
+    "RequestPath": "/uploads/media",
     "AllowedImageExtensions": [ ".jpg", ".jpeg", ".png", ".webp" ],
     "AllowedVideoExtensions": [ ".mp4", ".mov", ".avi", ".webm" ],
     "MaxImageSizeMb": 50,
     "MaxVideoSizeMb": 5000,
     "JpegQualityMain": 90,
     "JpegQualityThumb": 80,
-    "ThumbMaxWidth": 480
+    "ThumbMaxWidth": 480,
+    "AllowedAudioExtensions": [ ".mp3", ".wav", ".m4a", ".ogg" ],
+    "MaxAudioSizeMb": 200
   },
   "Logging": {
     "LogLevel": {
