--- a/src/Politico.API/appsettings.json
+++ b/src/Politico.API/appsettings.json
@@ -45,8 +45,7 @@
   },
   "Media": {
     "RootPath": "uploads/media",
-    //"RequestPath": "/media",
-    "RequestPath": "/uploads/media",
+    "RequestPath": "/media",
     "AllowedImageExtensions": [ ".jpg", ".jpeg", ".png", ".webp" ],
     "AllowedVideoExtensions": [ ".mp4", ".mov", ".avi", ".webm" ],
     "MaxImageSizeMb": 50,
