--- a/src/Politico.API/appsettings.json
+++ b/src/Politico.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"PoliticoDbConnection": "Server=DESKTOP-BT4EB20;Database=Politico;Trusted_Connection=True;TrustServerCertificate=True"
-    "PoliticoDbConnection": "Server=db34216.public.databaseasp.net; Database=db34216; User Id=db34216; Password=2w%S-6Cpa!7T; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+    "PoliticoDbConnection": "Server=DESKTOP-BT4EB20;Database=Politico;Trusted_Connection=True;TrustServerCertificate=True"
+    //"PoliticoDbConnection": "Server=db34216.public.databaseasp.net; Database=db34216; User Id=db34216; Password=2w%S-6Cpa!7T; Encrypt=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
   },
   "Smtp": {
     "Host": "smtp.gmail.com",
